# 3dasmr-pri

./: .gitattributes  .gitignore  .gitmodules  README.md  entitlements.plist  main.py  main.spec  pack-macos.sh  pack-win.sh  pack.bat  pack.sh  pyproject.toml
AppIcons/: appstore.icns
assets/: Kemar_HRTF_sofa.sofa  hrtf_left.f32  hrtf_params.txt  hrtf_right.f32
export/: install.sh  main.c
