[project]
name = "s-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nuitka>=2.8.6",
    "pandas>=2.3.3",
    "pyinstaller>=6.16.0",
    "pyside6>=6.10.1",
    "scipy>=1.15.3",
    "sounddevice>=0.5.3",
    "zstandard>=0.25.0",
]
